# svelte-axum-template

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .semgrepignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.prod  LICENSE  PRODUCTION_SSO_GUIDE.md  README.md  build-fullstack.sh  clean.js  configs.default.toml  configs.development.toml  configs.production.toml  debug.sh  development.toml  docker-compose.yml  fly-staging.toml  fly.toml  getsession.md  initialize_security.bat  initialize_security.sh  litestream.yml  oauth.md  openapi.json  package-lock.json  package.json  release.sh  run-dev.js  run.sh  rustfmt.toml  stabilization-plan-stage-a.md  student-tasks.md  svelaxum.code-workspace
.agents/: hooks.json  post_tool_hook.sh
.cargo/: audit.toml  config.toml
.devcontainer/: Dockerfile  devcontainer.json  setup-env.sh  setup-fish.sh  setup-zsh.sh  statusline-command.sh
.githooks/: pre-commit  pre-push
.github/: dependabot.yml
.sqlx/: query-10b8d81dafdb64d1b184ebe75e2bed501c6e4009f984d53705dcc55608d5e081.json  query-1276609496e5df51c33a5ae2e68e06edb9cc59dc290c8e677fdb1980dcfe03bc.json  query-1350904050a9f4e675733bc476b812d7df6a7ac38b2697e1b1892158faab5ba0.json  query-2abba8d0393f5e77ca0b50b6bcb954a3769fefa4ab2e4587831b8d89c1175e17.json  query-2d625749ea6d447e7b61ccdd4494a1a93784670acac34bbe38cb531765e7a362.json  query-56cb0dcc1bbbacbefb196157ab296b1362c753900abb7a8b0680427fbb8a5329.json  query-578120a7930d973203dd918af2ca44cf43645766576cb436292adf61083cf5f8.json  query-57e6cae29c95b2d6fbdbcfdfba212c5cd7cba3e6d7d371ea74c60e40564ba166.json  (+17 more)
api/: Cargo.toml  cli.rs  main.rs  server.rs
app/: Cargo.toml  app.rs  cli.rs
app/tests/: app.rs
back_end/: Cargo.toml  README_AUTH.md
back_end/config/: default.toml  development.toml
back_end/migrations/: 20250503000000_initial_schema.sql  20250515000000_add_initial_users.sql
back_end/src/: appconfig.rs  appcontext.rs  assets.rs  auth_utils.rs  cli.rs  jwt.rs  lib.rs  main.rs  middlewares.rs  password.rs  routes.rs  services.rs  state.rs  store.rs
back_end/src/app/: cli.rs  config.rs  context.rs
back_end/src/auth/: jwt.rs  mod.rs  password.rs
back_end/src/db/: config.rs  migrations.rs  mod.rs  schema.rs  store.rs
back_end/src/middlewares/: authenticator.rs  usersecure.rs
back_end/src/routes/: assets.rs  auth.rs  health.rs  mod.rs  session.rs  token.rs  user.rs
back_end/tests/: auth_tests.rs
back_end/tests/routes/: auth_tests.rs
backend/: Cargo.toml  cli.rs  main.rs  openapi.rs  router.rs  server.rs
backend/app/sample/: sample_api.rs
backend/config/: default.toml  development.toml  production.toml
backend/fly/: backup.rs  litestream.rs  recovery.rs
backend/platform/fly/: backup.rs  litestream.rs  recovery.rs
backend/platform/identity/auth/: auth_api.rs  auth_service.rs  auth_tests.rs
backend/platform/identity/oauth/: oauth_api.rs  oauth_service.rs
backend/platform/identity/tokens/: tokens_db.rs  tokens_service.rs  tokens_tests.rs  tokens_utils.rs
backend/platform/identity/users/: users_api.rs  users_db.rs  users_service.rs
backend/platform/shared/: api.rs  assets.rs  auth.rs  common.rs  config.rs  constants.rs  cookies.rs  crypto.rs  db.rs  jwt.rs  logger.rs  migrations.rs  rate_limiter.rs
backend/src/: lib.rs  main.rs
backend/src/api/: auth.rs  health.rs  users.rs
backend/src/app/: app.rs  assets_loader.rs  cli.rs  config.rs  context.rs  db.rs  migrations.rs  mod.rs  router.rs  server.rs
backend/src/app/identity/: identity_api.rs  identity_store.rs
backend/src/app/system/: system_api.rs
backend/src/auth/: auth_error.rs  error.rs  jwt.rs  logger.rs  mod.rs  oauth.rs  password.rs  sso.rs  tokens.rs
backend/src/cfg/: app_settings.rs  database_settings.rs  jwt_settings.rs  oauth_settings.rs  server_settings.rs
backend/src/common/: api_error.rs  constants.rs  context.rs  utils.rs
backend/src/core/: config.rs  context.rs  dberror.rs  dbpool.rs  dbtypes.rs
backend/src/db/: migrations.rs  mod.rs  refresh_tokens.rs  store.rs  tenants.rs  users.rs
backend/src/middleware/: rate_limit.rs
backend/src/platform/: assets.rs  cli.rs  common.rs  db.rs  jwt.rs  logger.rs  migrations.rs  router.rs  server.rs  sso.rs  tokens.rs  utils.rs
backend/src/routes/: api.rs  assets.rs  auth.rs  health.rs  mod.rs  test.rs  user_info.rs
backend/src/services/: audit.rs  sso.rs
backend/src/store/: refresh_tokens.rs  tenants.rs  users.rs
backend/src/tests/: auth_tests.rs  jwt_tests.rs  password_tests.rs
backend/test/: test_server.rs
backend/test/platform/identity/: auth_api_tests.rs  auth_service_tests.rs  auth_tests.rs  users_api_tests.rs  users_tests.rs  validate_redirect_path_tests.rs
backend/test/platform/shared/: auth_tests.rs  config_tests.rs  cookie_tests.rs  crypto_tests.rs  jwt_tests.rs  rate_limiter_tests.rs
backend/tests/: auth_tests.rs
code-review-findings/: 00-index.md  (+26 more)
platform/: Cargo.toml  platform.rs
platform/auth/: auth.rs  jwt.rs  password.rs  sso.rs  tokens.rs
platform/crypto/: tokens.rs
platform/identity/: api.rs  db.rs  handlers.rs  models.rs  queries.rs  routes.rs  tests.rs
platform/identity/auth/: api.rs  auth_api.rs  auth_service.rs  auth_tests.rs  db.rs  domain.rs  repo.rs  service.rs  tests.rs
platform/identity/oauth/: api.rs  oauth_api.rs  oauth_service.rs  service.rs
platform/identity/tokens/: db.rs  service.rs  tokens_db.rs  tokens_tests.rs  tokens_utils.rs  utils.rs
platform/identity/users/: api.rs  db.rs  domain.rs  repo.rs  service.rs  users_api.rs  users_db.rs  users_service.rs
platform/internal/: logger.rs  tokens.rs
platform/misc/: common.rs  config.rs  constants.rs  db.rs
platform/shared/: api.rs  auth.rs  cli.rs  common.rs  config.rs  constants.rs  db.rs  jwt.rs  logger.rs  migrations.rs  tests.rs
platform/src/: assets.rs  common.rs  handlers.rs  jwt.rs  lib.rs  migrations.rs  queries.rs  routes.rs
platform/tests/: identity_tests.rs  integration_tests.rs  jwt_tests.rs  password_tests.rs
platform/tests/identity/: auth_tests.rs  users_tests.rs
platform/tests/shared/: auth_tests.rs  jwt_tests.rs
(+120 files in other folders)
