[workspace]
resolver = "3"

members = [
    "platform",
    "app",
]

[workspace.dependencies]
app = { path = "app" }
platform = { path = "platform" }

argon2 = { version = "0.5", features = ["std"] }
axum = { version = "0.8", features = ["json", "form", "multipart"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.6", features = ["derive"] }
config = { version = "0.15" }
dotenvy = { version = "0.15" }
hex = { version = "0.4" }
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
mime_guess =  { version = "2.0" }
oauth2 = { version = "5.0", features = ["reqwest"] }
rand = {version = "0.10" }
reqwest = { version = "0.13", features = ["json", "rustls"] }
rpassword = { version = "7.4" }
rust-embed =  { version = "8.11" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version =  "1.0" }
sha2 = { version = "0.11" }
sqlx = { version = "0.8", features = ["sqlite", "chrono", "macros", "migrate", "runtime-tokio"] }
thiserror =  { version = "2.0" }
toml = { version = "1.1" }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["full"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.5" }
uuid = { version = "1.23", features = ["v4"] }
validator = { version = "0.20", features = ["derive"] }



# dev dependencies
axum-test = { version = "20.0" }
cookie = { version = "0.18" }
tokio = { version = "1.51", features = ["full"] }
