[workspace]
resolver = "3"

members = [
    "backend",
    "xtask",
]
default-members = [
    "backend",
]

[profile.dev.package."*"]
opt-level = 3

[workspace.lints.rust]
unsafe_code = "forbid"
unused_imports = "warn"
unused_variables = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"

