[package]
name = "svelaxum"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "svelaxum"
path = "main.rs"

[dependencies]
platform = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust-embed =  { workspace = true }
mime_guess =  { workspace = true }
sqlx = { workspace = true }
thiserror =  { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
jsonwebtoken = { workspace = true } 
uuid = { workspace = true }
argon2 = { workspace = true }
md5 = { workspace = true }
rpassword = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
axum-test = { workspace = true }
sha2 = { workspace = true }
oauth2 = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }
dotenvy = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }

# Important: This tells SQLx to skip compile-time verification of database queries
[package.metadata.sqlx]
offline = true
