[package]
name = "svelaxum"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "svelaxum"
path = "app.rs"

[dependencies]
platform = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
hex = { workspace = true }
mime_guess = { workspace = true }
reqwest = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[package.metadata.sqlx]
offline = true