[package]
name = "svelte-axum-project"
version = "0.4.2"
edition = "2021"
repository = "https://github.com/jbertovic/svelte-axum-project"
keywords = ["template", "backend", "frontend", "axum", "svelte"]
license = ""
categories = []
description = ""
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.4", features = ["json", "form", "multipart"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["full"] }
tower-sessions = "0.14.0"
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
rust-embed = "8.7.0"
mime_guess = "2.0.4"
