[package]
name = "svelte-axum-template"
version = "0.7.2"
edition = "2024"
repository = "https://github.com/AndreiBozantan/svelte-axum-template"
keywords = ["template", "backend", "frontend", "axum", "svelte"]
license = ""
categories = []
description = ""
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8", features = ["json", "form", "multipart"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["full"] }
tower-sessions = { version = "0.14" }
tokio = { version = "1.36", features = ["full"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version =  "1.0" }
rust-embed =  { version = "8.7" }
mime_guess =  { version = "2.0" }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros", "migrate"] }
thiserror =  { version = "1.0" }
dotenv =  { version = "0.15" }
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
config = { version = "0.15" }
# Added for enhanced security
argon2 = { version = "0.5", features = ["std"] }
rand = { version = "0.8" }
jsonwebtoken = { version = "9.2" }
# For random secure token generation
uuid = { version = "1.7", features = ["v4", "serde"] }

[features]
sqlite-offline = ["sqlx/sqlite"]

# Important: This tells SQLx to skip compile-time verification of database queries
[package.metadata.sqlx]
offline = true
