[package]
name = "svelaxum"
version = "0.8.0"
edition = "2024"
repository = "https://github.com/AndreiBozantan/svelte-axum-template"
keywords = ["template", "webapp", "fullstack", "backend", "frontend", "axum", "svelte", "sql"]
license = ""
categories = []
description = ""
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8", features = ["json", "form", "multipart"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["full"] }
tokio = { version = "1.36", features = ["full"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version =  "1.0" }
rust-embed =  { version = "8.7" }
mime_guess =  { version = "2.0" }
sqlx = { version = "0.8", features = ["sqlite", "chrono", "runtime-tokio-rustls", "macros", "migrate"] }
thiserror =  { version = "1.0" }
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
config = { version = "0.15" }
jsonwebtoken = { version = "9.0" }
uuid = { version = "1.0", features = ["v4"] }
argon2 = { version = "0.5", features = ["std"] }
md5 = { version = "0.7" }
rpassword = { version = "7.4" }
rand = {version = "0.9" }
hex = { version = "0.4" }
axum-test = { version = "17.3" }
sha2 = { version = "0.10" }
oauth2 = { version = "5.0", features = ["reqwest"] }
url = { version = "2.5" }
reqwest = { version = "0.12", features = ["json"] }
dotenvy = { version = "0.15" }
toml = { version = "0.9.3" }

[features]
sqlite-offline = ["sqlx/sqlite"]

# Important: This tells SQLx to skip compile-time verification of database queries
[package.metadata.sqlx]
offline = true
