[package]
name = "app"
version = "0.8.0"
edition = "2024"
license = "MIT"

[lints]
workspace = true


[[bin]]
name = "app"
path = "main.rs"

[dependencies]
argon2 = { version = "0.5", features = ["std"] }
axum = { version = "0.8", features = ["json", "form", "multipart"] }
axum-extra = { version = "0.12", features = ["cookie"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.6", features = ["derive"] }
cookie = { version = "0.18" }
config = { version = "0.15" }
dotenvy = { version = "0.15" }
governor = { version = "0.10" }
hex = { version = "0.4" }
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
mime_guess =  { version = "2.0" }
mimalloc = { version = "0.1", default-features = false }
oauth2 = { version = "5.0", features = ["reqwest"] }
percent-encoding = { version = "2.3" }
rand = {version = "0.10" }
reqwest = { version = "0.13", features = ["json", "rustls"] }
rpassword = { version = "7.4" }
rust-embed =  { version = "8.11" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version =  "1.0" }
sha2 = { version = "0.11" }
sqlx = { version = "0.8", features = ["sqlite", "chrono", "macros", "migrate", "runtime-tokio"] }
thiserror =  { version = "2.0" }
tokio = { version = "1.51", features = ["full"] }
toml = { version = "1.1" }
tower = { version = "0.5" }
tower_governor = { version = "0.8", features = ["axum"] }
tower-http = { version = "0.6", features = ["full"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.5" }
uuid = { version = "1.23", features = ["v4"] }
validator = { version = "0.20", features = ["derive"] }
utoipa = { version = "5.5", features = ["axum_extras", "chrono", "uuid"] }
utoipax = { version = "0.2", package="utoipa-axum" }
utoipa-swagger-ui = { version = "9.0", features = ["axum"], optional = true }

[features]
default = []
swagger = ["dep:utoipa-swagger-ui"]

[dev-dependencies]
axum-test = { version = "20.0" }

[package.metadata.sqlx]
offline = true
