[package]
name = "platform"
version = "0.8.0"
edition = "2024"
repository = "https://github.com/AndreiBozantan/svelte-axum-template"
keywords = ["template", "webapp", "fullstack", "backend", "frontend", "axum", "svelte", "sql"]
license = ""
categories = []
description = ""
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust-embed =  { workspace = true }
mime_guess =  { workspace = true }
sqlx = { workspace = true }
thiserror =  { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
jsonwebtoken = { workspace = true } 
uuid = { workspace = true }
argon2 = { workspace = true }
md5 = { workspace = true }
rpassword = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
axum-test = { workspace = true }
sha2 = { workspace = true }
oauth2 = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }
dotenvy = { workspace = true }
toml = { workspace = true }



[dev-dependencies]
axum = { version = "0.8", features = ["tokio", "http1", "http2"] }
cookie = "0.18"


# Important: This tells SQLx to skip compile-time verification of database queries
[package.metadata.sqlx]
offline = true
