[package]
name = "platform"
version = "0.8.0"
edition = "2024"
repository = "https://github.com/AndreiBozantan/svelte-axum-template"
keywords = ["template", "webapp", "fullstack", "backend", "frontend", "axum", "svelte", "sql"]
license = ""
categories = []
description = ""
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "platform.rs"

[dependencies]
axum = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust-embed =  { workspace = true }
mime_guess =  { workspace = true }
sqlx = { workspace = true }
thiserror =  { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
jsonwebtoken = { workspace = true }
uuid = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
oauth2 = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
rpassword = { workspace = true }

[features]
test-helpers = []

[dev-dependencies]
platform = { path = ".", features = ["test-helpers"] }
anyhow = "1.0"
axum-test = { workspace = true }
cookie = { workspace = true }
tokio = { workspace = true }

# This tells SQLx to use the local json cache for query verification instead of a live database
[package.metadata.sqlx]
offline = true
